Bug 257064 - [WebGPU] [Style] Lambdas in PAL/WebGPU capture more than they should and don't have correct whitespacing
Summary: [WebGPU] [Style] Lambdas in PAL/WebGPU capture more than they should and don'...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebGPU (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Myles C. Maxfield
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-05-19 17:03 PDT by Myles C. Maxfield
Modified: 2023-05-21 18:15 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Myles C. Maxfield 2023-05-19 17:03:18 PDT
[WebGPU] [Style] Lambdas in PAL/WebGPU capture more than they should and don't have correct whitespacing
Comment 1 Radar WebKit Bug Importer 2023-05-19 17:04:24 PDT
<rdar://problem/109589314>
Comment 2 Myles C. Maxfield 2023-05-19 17:09:02 PDT
Pull request: https://github.com/WebKit/WebKit/pull/14117
Comment 3 EWS 2023-05-21 18:15:54 PDT
Committed 264308@main (bb2ddeb3d448): <https://commits.webkit.org/264308@main>

Reviewed commits have been landed. Closing PR #14117 and removing active labels.