Source/WebCore/PAL/pal/graphics/WebGPU/Impl/WebGPUAdapterImpl.cpp
@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2021-2022 Apple Inc. All rights reserved.
+ * Copyright (C) 2021-2023 Apple Inc. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -198,8 +198,8 @@ void AdapterImpl::requestDevice(const DeviceDescriptor& descriptor, CompletionHa
 {
     auto label = descriptor.label.utf8();
 
-    auto features = descriptor.requiredFeatures.map([this] (auto featureName) {
-        return m_convertToBackingContext->convertToBacking(featureName);
+    auto features = descriptor.requiredFeatures.map([&convertToBackingContext = m_convertToBackingContext.get()](auto featureName) {
+        return convertToBackingContext.convertToBacking(featureName);
     });
 
     auto limits = WGPULimits {
